[tool.poetry]
name = "network"
version = "0.1.0"
description = "my CS50 web network project"
authors = ["Furthermore <wrbyepcr11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
humanize = "^4.9.0"
livereload = "^2.6.3"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
